--- a/package.json
+++ b/package.json
@@ -21,10 +21,13 @@
     "mobx": "^6.2.0",
     "mobx-react": "^7.1.0",
     "moment": "^2.29.1",
-    "prop-types": "^15.7.2",
+    "prop-types": "^15.8.1",
     "react": "17.0.2",
     "react-native": "0.66.3",
+    "react-native-device-info": "^8.7.0",
     "react-native-gesture-handler": "^1.10.3",
+    "react-native-iphone-x-helper": "^1.3.1",
+    "react-native-line-style": "^0.1.1",
     "react-native-safe-area-context": "^3.2.0",
     "react-native-screens": "^3.1.1"
   },
