--- a/ios/Podfile
+++ b/ios/Podfile
@@ -12,6 +12,13 @@ target 'accelerator' do
     :hermes_enabled => false
   )
 
+    permissions_path = '../node_modules/react-native-permissions/ios'
+
+    pod 'Permission-PhotoLibrary', :path => "#{permissions_path}/PhotoLibrary"
+    pod 'Permission-PhotoLibraryAddOnly', :path => "#{permissions_path}/PhotoLibraryAddOnly"
+    pod 'Permission-Camera', :path => "#{permissions_path}/Camera"
+    pod 'Permission-Microphone', :path => "#{permissions_path}/Microphone"
+
   target 'acceleratorTests' do
     inherit! :complete
     # Pods for testing
