--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "huqiang",
   "dependencies": {
     "@react-native-community/async-storage": "^1.12.1",
+    "@react-native-community/cameraroll": "^4.1.2",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-native-community/viewpager": "^5.0.11",
     "@react-navigation/bottom-tabs": "^5.11.10",
@@ -26,8 +27,11 @@
     "react-native": "0.66.3",
     "react-native-device-info": "^8.7.0",
     "react-native-gesture-handler": "^1.10.3",
+    "react-native-image-resizer": "^1.4.5",
     "react-native-iphone-x-helper": "^1.3.1",
     "react-native-line-style": "^0.1.1",
+    "react-native-permissions": "^3.3.1",
+    "react-native-phasset": "^1.0.10",
     "react-native-safe-area-context": "^3.2.0",
     "react-native-screens": "^3.1.1"
   },
