--- a/package.json
+++ b/package.json
@@ -29,11 +29,13 @@
     "react-native-gesture-handler": "^1.10.3",
     "react-native-image-resizer": "^1.4.5",
     "react-native-iphone-x-helper": "^1.3.1",
+    "react-native-largelist": "^3.1.0-rc.2",
     "react-native-line-style": "^0.1.1",
     "react-native-permissions": "^3.3.1",
     "react-native-phasset": "^1.0.10",
     "react-native-safe-area-context": "^3.2.0",
-    "react-native-screens": "^3.1.1"
+    "react-native-screens": "^3.1.1",
+    "react-native-spring-scrollview": "^4.0.0-dev-0"
   },
   "devDependencies": {
     "@babel/core": "^7.16.0",
