--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   },
   "author": "huqiang",
   "dependencies": {
+    "@huxin957/react-native-modal": "^1.0.1",
+    "@huxin957/react-native-portal": "^1.0.1",
+    "@huxin957/react-native-toast": "^1.0.1",
     "@react-native-community/async-storage": "^1.12.1",
     "@react-native-community/cameraroll": "^4.1.2",
     "@react-native-community/masked-view": "^0.1.11",
