--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@react-navigation/core": "^5.15.3",
     "@react-navigation/native": "^5.9.4",
     "@react-navigation/stack": "^5.14.4",
+    "axios": "^0.26.1",
     "mobx": "^6.2.0",
     "mobx-react": "^7.1.0",
     "moment": "^2.29.1",
