--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "author": "huqiang",
   "dependencies": {
-    "@huxin957/react-native-modal": "^1.0.7",
+    "@huxin957/react-native-modal": "^1.0.8",
     "@huxin957/react-native-portal": "^1.0.2",
     "@huxin957/react-native-toast": "^1.0.2",
     "@react-native-community/async-storage": "^1.12.1",
@@ -31,6 +31,7 @@
     "react": "17.0.2",
     "react-native": "0.66.3",
     "react-native-device-info": "^8.7.0",
+    "react-native-fast-image": "^8.5.11",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-image-resizer": "^1.4.5",
     "react-native-iphone-x-helper": "^1.3.1",
