--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@react-native-community/cameraroll": "^4.1.2",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-native-community/netinfo": "^8.2.0",
+    "@react-native-community/slider": "^4.2.2",
     "@react-native-community/viewpager": "^5.0.11",
     "@react-navigation/bottom-tabs": "^5.11.10",
     "@react-navigation/core": "^5.15.3",
